# fractalbits-main

./: .gitignore  Cargo.toml  README.md  justfile
api_server/: Cargo.toml  build.rs
api_server/benches/bench_from_http_client/src/: main.rs
api_server/benches/rewrk/: .gitignore
api_server/benches/rewrk/src/http/: mod.rs
api_server/benches/rewrk_rpc/: Cargo.toml
api_server/benches/rewrk_rpc/src/: bench.rs  main.rs  results.rs
api_server/benches/rewrk_rpc/src/rpc/: mod.rs
api_server/bucket_tables/: Cargo.toml
api_server/bucket_tables/src/: api_key_table.rs  bucket_table.rs  lib.rs  permission.rs  table.rs
api_server/kv_client_traits/: Cargo.toml
api_server/kv_client_traits/src/: lib.rs
api_server/rpc_client/bss/: Cargo.toml
api_server/rpc_client/bss/src/: lib.rs  message.rs  rpc.rs
api_server/rpc_client/bss/tests/: blob_io.rs
api_server/rpc_client/common/: codec.rs  conn_manager.rs  rpc_client.rs
api_server/rpc_client/nss/: Cargo.toml
api_server/rpc_client/nss/src/: conn_manager.rs  lib.rs  message.rs  nss.rs  rpc.rs
api_server/rpc_client/rss/: Cargo.toml  build.rs
api_server/rpc_client/rss/src/: codec.rs  lib.rs  message.rs  rpc.rs  rpc_client.rs
api_server/rpc_client/rss/src/proto/: rss_ops.proto
api_server/rpc_client/storage_server/: Cargo.toml
api_server/rpc_client/storage_server/src/: lib.rs  message.rs
api_server/rpc_client/storage_server/tests/: blob_io.rs
api_server/slotmap_conn_pool/: Cargo.toml
api_server/slotmap_conn_pool/src/: lib.rs
api_server/src/: api_key_routes.rs  blob_client.rs  blob_storage.rs  bucket_tables.rs  config.rs  extract.rs  handler.rs  lib.rs  main.rs  nss_ops.proto  object_layout.rs  response.rs  rpc_client.rs  ws_client.rs
api_server/src/blob_storage/: bss_only_single_az_storage.rs  hybrid_single_az_storage.rs  retry.rs  s3_express_multi_az_storage.rs  s3_express_multi_az_with_tracking.rs  s3_express_single_az_storage.rs  s3_express_with_tracking.rs  session_prewarming.rs
api_server/src/bucket_tables/: api_key_table.rs  bucket_table.rs  table.rs
api_server/src/extract/: api_command.rs  api_signature.rs  bucket_name.rs  key.rs
api_server/src/handler/: bucket.rs  common.rs  delete.rs  endpoint.rs  extract_bucket_name.rs  get.rs  head.rs  list.rs  mpu.rs  post.rs  put.rs  session.rs  time.rs
api_server/src/handler/bucket/: create_bucket.rs  delete_bucket.rs  head_bucket.rs  list_buckets.rs
api_server/src/handler/common/: checksum.rs  data.rs  encoding.rs  request.rs  s3_error.rs  signature.rs  xheader.rs
api_server/src/handler/common/request/: extract.rs  signature.rs
api_server/src/handler/common/signature/: body.rs  checksum.rs  error.rs  (+2 more)
api_server/src/handler/delete/: abort_multipart_upload.rs  delete_object.rs  delete_objects.rs
api_server/src/handler/get/: get_object.rs  get_object_attributes.rs  list_multipart_uploads.rs  list_objects.rs  list_objects_v2.rs  list_parts.rs
api_server/src/handler/head/: head_object.rs
api_server/src/handler/list/: list_multipart_uploads.rs  list_objects.rs  list_objects_v2.rs  list_parts.rs
api_server/src/handler/mpu/: abort_multipart_upload.rs  complete_multipart_upload.rs  create_multipart_upload.rs  upload_part.rs
api_server/src/handler/post/: complete_multipart_upload.rs  create_multipart_upload.rs  delete_objects.rs  rename_dir.rs
api_server/src/handler/put/: block_data_stream.rs  copy_object.rs  put_object.rs  rename_folder.rs  rename_object.rs  s3_streaming.rs  upload_part.rs
api_server/src/response/: xml.rs
api_server/src/utils/: mod.rs
api_server/tests/: basic.rs  checksums.rs  chunk_signature_e2e.rs  common.rs  list.rs  multi_az_resilience.rs  multipart.rs  objects.rs
common/crates/data_blob_tracking/: Cargo.toml
common/crates/data_blob_tracking/src/: lib.rs
crates/api_server/: Cargo.toml
crates/api_server/benches/bench_from_http_client/: Cargo.toml
crates/api_server/benches/rewrk/: Cargo.toml
crates/api_server/benches/rewrk_rpc/: Cargo.toml
crates/api_server/src/: api_key_routes.rs  blob_client.rs  blob_storage.rs  bump_pool.rs  cache_mgmt.rs  config.rs  handler.rs  lib.rs  main.rs  object_layout.rs  runtime.rs
crates/api_server/src/blob_storage/: retry.rs  s3_express_multi_az_storage.rs  s3_hybrid_single_az_storage.rs
crates/api_server/src/handler/: bucket.rs  common.rs  delete.rs  endpoint.rs  get.rs  head.rs  post.rs  put.rs
crates/api_server/src/runtime/: listeners.rs  per_core.rs
crates/api_server/src/uring/: config.rs  mod.rs  ring.rs
crates/api_server/tests/: basic.rs  checksums.rs  chunk_signature_e2e.rs  list.rs  multipart.rs  objects.rs
crates/common/data_blob_tracking/: Cargo.toml
crates/common/data_blob_tracking/src/: lib.rs
crates/common/data_types/: Cargo.toml
crates/common/data_types/src/: api_key.rs  bucket.rs  hash.rs  lib.rs  trace_id.rs  volume.rs
crates/common/rpc_clients/bss/: Cargo.toml
crates/common/rpc_clients/client_common/: Cargo.toml
crates/common/rpc_clients/nss/: Cargo.toml
crates/common/rpc_clients/rss/: Cargo.toml
crates/common/rpc_codecs/nss_codec/: Cargo.toml  build.rs
crates/common/volume_group_proxy/: Cargo.toml
crates/common/volume_group_proxy/src/: data_vg_proxy.rs  lib.rs  metadata_vg_proxy.rs
crates/container-all-in-one/: Cargo.toml
crates/container-all-in-one/src/: main.rs  orchestrator.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: cmd_bench.rs  cmd_build.rs  cmd_deploy.rs  cmd_git.rs  cmd_nightly.rs  cmd_precheckin.rs  cmd_publish.rs  cmd_run_tests.rs  cmd_service.rs  cmd_tool.rs  main.rs
crates/xtask/src/cmd_run_tests/: leader_election.rs  multi_az.rs
crates/xtask/tools/: Cargo.toml
crates/xtask/tools/src/: lib.rs
vpc/fractalbits-bootstrap/: Cargo.toml
vpc/fractalbits-bootstrap/src/: api_server.rs  bench_client.rs  bench_server.rs  bss_server.rs  common.rs  config.rs  discovery.rs  etcd_cluster.rs  etcd_server.rs  gui_server.rs  main.rs  nss_server.rs  root_server.rs  workflow.rs
vpc/fractalbits-bootstrap/src/bench_server/: yaml_put.rs
vpc/fractalbits-bootstrap/src/nss_server/: ebs_journal.rs  nvme_journal.rs
(+232 files in other folders)
