[workspace]
members = [
    "api_server",
    "api_server/benches/rewrk",
    "api_server/benches/rewrk_rpc",
    "api_server/bucket_tables",
    "api_server/rpc_client/bss",
    "api_server/rpc_client/nss",
    "api_server/rpc_client/rss",
    "cdk/fractalbits-bootstrap",
    "root_server",
    "root_server/admin",
    "root_server/ebs-failover",
    "tools/format-nss",
    "xtask",
    "xtask/tools",
]
resolver = "2"

[workspace.dependencies]
rpc_client_bss = { path = "api_server/rpc_client/bss" }
rpc_client_nss = { path = "api_server/rpc_client/nss" }
rpc_client_rss = { path = "api_server/rpc_client/rss" }
bucket_tables = { path = "api_server/bucket_tables" }
xtask_tools = { path = "xtask/tools" }

tokio-util = { version = "0.7.12", features = ["codec"] }
tokio-stream = "0.1.16"
thiserror = "1.0.63"
fake = "3.0.1"
bytemuck = { version = "1.18.0", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.8", default-features = false, features = ["http1", "query", "tokio"] }
axum-extra = { version = "0.10", features = ["protobuf"] }
axum-macros = "0.5.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prost = "0.13"
bytes = "1.7.1"
tracing = "0.1.40"
tower-http = { version = "0.5.2", features = ["trace"] }
console-subscriber = "0.4.0"
tower = "0.5.1"
strum = { version = "0.26.3", features = ["derive"] }
quick-xml = { version = "0.36.2", features = ["serialize"] }
http-body-util = "0.1.2"
uuid = { version = "1.11.0", features = ["v4", "v7"] }
rkyv = { version = "0.8.8", features = ["uuid-1", "unaligned"] }
rand = "0.8.5"
hex = "0.4.3"
chrono = "0.4.39"
httpdate = "1.0.3"
futures = "0.3.31"
pin-project-lite = "0.2.15"
etcd-client = "0.14.0"
serde_json = "1.0.138"
toml = { version = "0.8", default-features = false, features = ["parse"] }
clap = { version = "4.5.27", features = ["derive"] }
hmac = "0.12"
itertools = "0.13"
crc32fast = "1.4.2"
xxhash-rust = {version = "0.8.15", features = ["xxh3"] }
blake2 = "0.10.6"
nom = "7.1"
base64 = "0.22.1"
crc32c = "0.6.8"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
url = "2.5.4"
http-body = "1.0.1"
serde_bytes = "0.11"
percent-encoding = "2.3.1"
sync_wrapper = "1.0.2"
http-range = "0.1.5"
aws-config = "1.6.3"
openssl = { version = "0.10.72", features = ["vendored"]}
aws-sdk-dynamodb = "1.78.0"
aws-sdk-ec2 = "1.136.0"
log = "0.4.27"
systemd-journal-logger = "2.2.2"
bb8 = "0.9.0"
metrics = "0.24"
metrics-exporter-statsd = "0.9.0"
tokio-retry = "0.3"
moka = { version = "0.12", features = ["future"] }

# Dev dependencies
aws-sdk-s3 = "1.65.0"
cmd_lib = "1.9.6"
tracing-test = {version = "0.2.5", features = ["no-env-filter"]}
env_logger = "0.11.5"
num_cpus = "1.16.0"
rayon = "1.10.0"
rlimit = "0.10.2"
tempfile = "3.18.0"
rstest = "0.25.0"

# Build dependencies
prost-build = "0.13"

[profile.dev]
lto = "off"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = true
