[package]
name = "api_server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.7.7", default-features = false, features = ["http1", "query", "tokio"] }
axum-extra = { version = "0.9.3", features = ["protobuf"] }
tokio = { version = "1.39.2", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prost = "0.13"
bytes = "1.7.1"
tracing = "0.1.40"
tower-http = { version = "0.5.2", features = ["trace"] }
console-subscriber = "0.4.0"
rpc_client_nss = { path = "rpc_client/nss" }
rpc_client_bss = { path = "rpc_client/bss" }
tower = "0.5.1"
strum = { version = "0.26.3", features = ["derive"] }
quick-xml = { version = "0.36.2", features = ["serialize"] }
http-body-util = "0.1.2"
uuid = { version = "1.11.0", features = ["v4", "v7"] }
rkyv = { version = "0.8.8", features = ["uuid-1", "unaligned"] }
rand = "0.8.5"
hex = "0.4.3"
chrono = "0.4.39"
httpdate = "1.0.3"

[dev-dependencies]
aws-sdk-s3 = "1.65.0"
base64 = "0.22.1"
cmd_lib = "1.9.5"
sha1 = "0.10.6"
