[package]
name = "api_server"
version = "0.1.0"
edition = "2021"

[dependencies]
rpc_client_common.workspace = true
rpc_client_nss.workspace = true
rpc_client_bss.workspace = true
rpc_client_rss.workspace = true
nss_codec.workspace = true
data_types.workspace = true
data_blob_tracking.workspace = true
slotmap_conn_pool.workspace = true

serde.workspace = true
config.workspace = true
axum.workspace = true
axum-extra.workspace = true
axum-macros.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
prost.workspace = true
bytes.workspace = true
tracing.workspace = true
tower-http.workspace = true
console-subscriber.workspace = true
tower.workspace = true
strum.workspace = true
quick-xml.workspace = true
http-body-util.workspace = true
uuid.workspace = true
rkyv.workspace = true
rand.workspace = true
hex.workspace = true
chrono.workspace = true
httpdate.workspace = true
futures.workspace = true
pin-project-lite.workspace = true
serde_json.workspace = true
toml.workspace = true
clap.workspace = true
hmac.workspace = true
itertools.workspace = true
thiserror.workspace = true
xxhash-rust.workspace = true
blake2.workspace = true
nom.workspace = true
base64.workspace = true
crc32c.workspace = true
crc32fast.workspace = true
md-5.workspace = true
sha1.workspace = true
sha2.workspace = true
url.workspace = true
http-body.workspace = true
serde_bytes.workspace = true
percent-encoding.workspace = true
sync_wrapper.workspace = true
tokio-stream.workspace = true
http-range.workspace = true
aws-sdk-s3.workspace = true
aws-config.workspace = true
aws-smithy-http-client.workspace = true
openssl.workspace = true
metrics.workspace = true
metrics-exporter-statsd = { workspace = true, optional = true }
metrics-exporter-prometheus = { workspace = true, optional = true }
tokio-retry.workspace = true
moka.workspace = true
tikv-jemallocator.workspace = true
arrayvec.workspace = true
governor.workspace = true

[dev-dependencies]
test_common.workspace = true
cmd_lib.workspace = true
sha1.workspace = true
tempfile.workspace = true
rstest.workspace = true

[features]
default = ["metrics_prometheus"]
metrics_statsd = ["dep:metrics-exporter-statsd"]
metrics_prometheus = ["dep:metrics-exporter-prometheus"]
