[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
cmd_lib.workspace = true
env_logger.workspace = true
rlimit.workspace = true
clap.workspace = true
strum.workspace = true
xtask_tools.workspace = true
colored.workspace = true
test_common.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-dynamodb.workspace = true
aws-config.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
comfy-table.workspace = true
