[package]
name = "fractalbits-bootstrap"
version = "0.1.0"
edition = "2024"

[dependencies]
log.workspace = true
env_logger.workspace = true
cmd_lib.workspace = true
xtask_tools.workspace = true
chrono.workspace = true
serde_json.workspace = true
serde.workspace = true
toml.workspace = true
rayon.workspace = true
