[package]
name = "rpc_client_bss"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytemuck.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
uuid.workspace = true
fake.workspace = true
bb8.workspace = true
metrics.workspace = true
metrics-exporter-statsd.workspace = true
tokio-retry.workspace = true

[features]
default = ["bss"]
bss = []
nss = []
rss = []

[dev-dependencies]
tracing-test.workspace = true
