[package]
name = "rpc_client_nss"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
prost = "0.13"
bytes = "1.7.1"
thiserror = "1.0.63"
tracing = "0.1.40"
bytemuck = { version = "1.18.0", features = ["derive"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
tokio-stream = "0.1.16"

[build-dependencies]
prost-build = "0.13"

[features]
default = ["nss"]
bss = []
nss = []
rss = []
