[package]
name = "rpc_client_nss"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
tokio.workspace = true
prost.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytemuck.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
bb8.workspace = true
metrics.workspace = true
metrics-exporter-statsd.workspace = true
tokio-retry.workspace = true

[build-dependencies]
prost-build.workspace = true

[features]
default = ["nss"]
bss = []
nss = []
rss = []
