[package]
name = "data_blob_tracking"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# RPC clients
rpc_client_nss = { workspace = true }
rpc_client_rss = { workspace = true }
rpc_client_common = { workspace = true }
slotmap_conn_pool = { workspace = true }

# Codecs (needed for response types)
rss_codec = { workspace = true }
nss_codec = { workspace = true }

# Data types for accessing data structures
data_types = { workspace = true }
