[package]
name = "volume_group_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes.workspace = true
futures.workspace = true
metrics.workspace = true
rand.workspace = true
rkyv.workspace = true
rpc_client_bss.workspace = true
rpc_client_common.workspace = true
rss_codec.workspace = true
data_types.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
thiserror.workspace = true
xxhash-rust.workspace = true