[package]
name = "rewrk_rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.89"
bytes = "1.7.1"
clap = "2"
colored = "2"
futures-util = "0.3"
rpc_client_nss = { path = "../../../common/crates/rpc_clients/nss" }
rpc_client_bss = { path = "../../../common/crates/rpc_clients/bss" }
regex = "1.10.6"
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "1"
pin-project-lite = "0.2"
futures = "0.3"
uuid = { version = "1.11.0", features = ["v7"] }
rlimit = "0.10.2"
