[package]
name = "rpc_client_common"
version = "0.1.0"
edition = "2024"

[features]
io_uring = [
    "dep:io-uring",
    "dep:core_affinity",
    "dep:crossbeam-channel",
    "dep:libc",
]

[dependencies]
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
metrics.workspace = true
tokio-retry.workspace = true
slotmap_conn_pool.workspace = true
parking_lot.workspace = true
strum.workspace = true
socket2.workspace = true
rpc_codec_common.workspace = true
futures.workspace = true
async-trait.workspace = true
io-uring = { workspace = true, optional = true }
core_affinity = { workspace = true, optional = true }
crossbeam-channel = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
