[package]
name = "rpc_client_common"
version = "0.1.0"
edition = "2024"

[features]
metrics = ["metrics_wrapper/metrics"]

[dependencies]
bytes.workspace = true
data_types.workspace = true
prost.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
metrics.workspace = true
metrics_wrapper.workspace = true
tokio-retry.workspace = true
parking_lot.workspace = true
strum.workspace = true
rand.workspace = true
socket2.workspace = true
rpc_codec_common.workspace = true
futures.workspace = true
async-trait.workspace = true
