[package]
name = "rpc_client_nss"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
tokio.workspace = true
prost.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
metrics.workspace = true
metrics-exporter-statsd.workspace = true
tokio-retry.workspace = true
slotmap_conn_pool.workspace = true
parking_lot.workspace = true
strum.workspace = true
rpc_client_common.workspace = true
socket2.workspace = true
nss_codec.workspace = true
rpc_codec_common.workspace = true
